cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/cfn_benchmark__cfn_templates__Tianyi2__IRIS__data__cloudformation_collected_templates_new__template_24944_negative2.yaml
Resources:
  # This sample does not flag because "PubliclyAccessible" is set to false
  # Legacy RDS DBSecurityGroup with inline ingress
  DbSecurityByEC2SecurityGroupInline_neg2:
    Type: AWS::RDS::DBSecurityGroup
    Properties:
      GroupDescription: "Legacy inline ingress"
      DBSecurityGroupIngress:
        - CIDRIP: 0.0.0.0/0

  # Legacy RDS DBSecurityGroup with standalone ingress
  DbSecurityByEC2SecurityGroupStandalone_neg2:
    Type: AWS::RDS::DBSecurityGroup
    Properties:
      GroupDescription: "Legacy standalone ingress"

  DbSecurityIngressRule_neg2:
    Type: AWS::RDS::DBSecurityGroupIngress
    Properties:
      DBSecurityGroupName: !Ref DbSecurityByEC2SecurityGroupStandalone_neg2
      CIDRIP: 0.0.0.0/0

  # EC2 Security Group with inline IPv4 and IPv6 rules
  DBEC2SecurityGroupInline_neg2:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Inline IPv4 and IPv6 ingress"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIpv6: ::/0

  # EC2 Security Group with standalone ingress rules
  DBEC2SecurityGroupStandalone_neg2:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Standalone IPv4 and IPv6 ingress"
      VpcId: !Ref VPC

  DBEC2SecurityGroupIngress_neg2:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref DBEC2SecurityGroupStandalone_neg2
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      CidrIp: 0.0.0.0/0

  DBEC2SecurityGroupIngressIPv6_neg2:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref DBEC2SecurityGroupStandalone_neg2
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      CidrIpv6: "0000:0000:0000:0000:0000:0000:0000:0000/0"

  # RDS Instance referencing all security groups
  DBInstance_neg2:
    Type: AWS::RDS::DBInstance
    Properties:
      PubliclyAccessible: false     #set to false
      DBName: !Ref DBName
      Engine: MySQL
      DBSecurityGroups:
        - !Ref DbSecurityByEC2SecurityGroupInline_neg2
        - !Ref DbSecurityByEC2SecurityGroupStandalone_neg2
      VPCSecurityGroups:
        - !Ref DBEC2SecurityGroupInline_neg2
        - !Ref DBEC2SecurityGroupStandalone_neg2
